Fix overlapping labels

--- a/assets/scss/municipal-money.scss
+++ b/assets/scss/municipal-money.scss
@@ -5,9 +5,6 @@
 }
 
 .indicator-chart {
-    .axis {
-        font: 16px sans-serif;
-    }
 
     .axis path,
     .axis .tick line,
